# tempify-sdk

./: .buildinfo  .gitignore  README.md  analysis.aggregator.html  analysis.detectors.base.html  analysis.detectors.exact_matcher.html  analysis.detectors.heuristic_classifier.html  analysis.detectors.html  analysis.detectors.regex_maker.html  analysis.detectors.semantic_classifier.html  analysis.detectors.utils.coerce_to_lines.html  analysis.detectors.utils.html  analysis.detectors.utils.make_match.html  analysis.detectors.utils.normalize_line.html  analysis.domain_packs.html  analysis.domain_scoring.html  analysis.features.html  analysis.forms.callouts.html  analysis.forms.headings.html  analysis.forms.html  analysis.forms.lists.html  analysis.forms.paragraphs.html  analysis.forms.tables.html  analysis.html  analysis.matcher.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  schema.build_schema.html  schema.html  schema.schema_generator.html  schema_runner.html  schema_runner.resolvers.html  schema_runner.resolvers.style_resolver.html  schema_runner.router.html  schema_runner.run_schema.html  (+17 more)
.doctrees/: analysis.aggregator.doctree  analysis.detectors.base.doctree  analysis.detectors.doctree  analysis.detectors.exact_matcher.doctree  analysis.detectors.heuristic_classifier.doctree  analysis.detectors.regex_maker.doctree  analysis.detectors.semantic_classifier.doctree  analysis.detectors.utils.coerce_to_lines.doctree  analysis.detectors.utils.doctree  analysis.detectors.utils.make_match.doctree  index.doctree  (+37 more)
(+131 files in other folders)
