[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "templify-sdk"
version = "0.1.0"
description = "Analyze DOCX XML and plaintext, then generate templated Word XML."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rodney Brown" }]
keywords = ["docx", "xml", "word", "templating", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "lxml>=5.2",
  "python-docx>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/templify"]

[project.scripts]
templify = "templify.cli:main"

